an: maven, jackson JSON parser, other dependencies